[project]
name = "ProjectEuler"
version = "0.1"
dependencies = ["sympy==1.11.1", "scipy==1.8.1"]

[project.optional-dependencies]
dev = [
    "isort>=6.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 119
multi_line_output = 3
lines_after_imports = 2
lines_between_types = 1
combine_as_imports = true
combine_star = true
include_trailing_comma = true

# Custom section order (using forced separation between from and non-from imports)
group_by_package = false
order_by_type = true
